# pdfimpose

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .pylintrc  .readthedocs.yaml  CHANGELOG  CHANGELOG.md  MANIFEST.in  README  README.rst  TODO  TODO.md  pylintrc  pyproject.toml  requirements.txt  setup.cfg  setup.py  stdeb.cfg  tox.ini
doc/: conf.py  index.rst  lib.rst  library.rst  requirements.txt  usage.rst
doc/examples/: Makefile  calendar2022.sh  calendar2022.tex  calendar2024.tex
doc/lib/: cards.rst  common.rst  copycutfold.rst  cutstackfold.rst  hardcover.rst  onepagezine.rst  perfect.rst  saddle.rst  schema.rst  wire.rst
examples/: calendar2015.sh  calendar2015.tex
pdfimpose/: __init__.py  __main__.py  errors.py  imposition.py  main.py  options.py  pdf.py  test.py
pdfimpose.bak/: __init__.py
pdfimpose/apply/: __init__.py  __main__.py
pdfimpose/schema/: __init__.py  common.py
pdfimpose/schema/cards/: __init__.py  __main__.py
pdfimpose/schema/copycutfold/: __init__.py  __main__.py
pdfimpose/schema/cutstackfold/: __init__.py  __main__.py
pdfimpose/schema/hardcover/: __init__.py
pdfimpose/schema/onepagezine/: __init__.py  __main__.py
pdfimpose/schema/perfect/: __init__.py  __main__.py
pdfimpose/schema/saddle/: __init__.py  __main__.py
pdfimpose/schema/wire/: __init__.py  __main__.py
test/: __init__.py  doctest_all.py  test_cmdline.py  test_commandline.py  test_doctest.py  test_matrix.py
test/test_commandline/: __init__.py
test/test_commandline-data/: .gitignore
test/test_commandline/data/apply/: pdfimpose.cfg
test/test_library/: __init__.py
test/test_library/data/: .gitignore
