[project]
name = "pdfimpose"
version = "2.8.0"
authors = [ 
    {name = "Louis Paternault", email = "spalax@gresille.org"},
    {name = "Kevin Oberlies", email = "favilo@gmail.com"},
]
# license = "AGPL-3.0-or-later"
# license-files = ["LICENSE"]
description = "Perform imposition of a PDF file."
keywords = ["pdf", "imposition", "print"]
# url = "http://framagit.org/spalax/pdfimpose"
readme = { file = "README.rst", content-type = "text/x-rst" }
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Printing",
]
requires-python = ">=3.10"
dependencies = [
    "argdispatch>=1.4.0",
    "dataclass-wizard>=0.35.0",
    "papersize>=1.6.0",
    "pymupdf>=1.24.3",
    "pyxdg>=0.28",
]
[project.urls]
Documentation = "http://pdfimpose.readthedocs.io"
Source = "https://framagit.org/spalax/pdfimpose"
Tracker = "https://framagit.org/spalax/pdfimpose/issues"

[tool.black]
line-length = 88
target-version = ["py310", "py311", "py312", "py313"]
exclude = '''
/(
    \.git
  | \.hg
  | \.eggs
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"

[dependency-groups]
dev = [
    "black>=25.1.0",
    "coverage>=7.8.0",
    "mock>=5.2.0",
    "mypy>=1.15.0",
    "pylint>=3.3.6",
    "pyright>=1.1.399",
    "pytest>=8.3.5",
    "ruff>=0.11.5",
    "sphinx>=4",
    "sphinx-argparse>=0.5.2",
    "sphinx-rtd-theme>=1.0.0",
    "tox>=4.25.0",
    "types-pyxdg>=0.28.0.20240106",
    "types-setuptools>=78.1.0.20250329",
    "wand>=0.6.13",
]
